--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-
-	<div class="bg-img-container">
-	<img src="live/20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png" class="bg-img zoom-target" id="main-bg-img" alt="Studio Living Room" />
-	</div>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -425,36 +421,11 @@
 			}
 		}
 	</style>
-</head>
-
-		body {
-			margin: 0;
-			padding: 0;
-			min-height: 100vh;
-			min-width: 100vw;
-			font-family: 'Montserrat', Arial, sans-serif;
-			background: #000 url('live/concertbackground.png') no-repeat center center fixed;
-			background-size: cover;
-			color: #fff;
-			overflow-x: hidden;
-		}
-
-		@media (max-width: 700px) {
-			body {
-				background-position: 0 0;
-				background-size: contain;
-				animation: bg-move-left 30s linear infinite;
-			}
-			@keyframes bg-move-left {
-				0% {
-					background-position-x: 0%;
-				}
-				100% {
-					background-position-x: 100%;
-				}
-			}
-		}
-    
+		</head>
+		<body>
+		<div class="bg-img-container">
+			<img src="live/20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png" class="bg-img zoom-target" id="main-bg-img" alt="Studio Living Room" />
+		</div>
 	<script>
 		// Hamburger menu toggle for mobile
 		document.addEventListener('DOMContentLoaded', function() {
