Describe what you changed here

--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
 				width: 100vw;
 				height: 100vh;
 				overflow: hidden;
-				background: #000;
+				background: #000 url('live/concertbackground.png') no-repeat center center fixed;
+				background-size: cover;
 				display: block;
 			}
 					.bg-img-container {
