--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-	<div class="bg-img-container">
-		<img src="live/20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png" class="bg-img zoom-target" id="main-bg-img" alt="Studio Living Room" />
-	</div>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -425,7 +422,11 @@
 			}
 		}
 	</style>
-		</head>
+			</head>
+			<body>
+			<div class="bg-img-container">
+				<img src="live/20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png" class="bg-img zoom-target" id="main-bg-img" alt="Studio Living Room" />
+			</div>
 		<body>
 		<div class="bg-img-container">
 			<img src="live/20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png" class="bg-img zoom-target" id="main-bg-img" alt="Studio Living Room" />
