Describe what you changed here

--- a/live/index.html
+++ b/live/index.html
@@ -128,34 +128,7 @@
 		</div>
 	</div>
 	<a href="/index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Logo" class="logo-img" border="0"></a>
-</body>
-</html>
-</body>
-</html>
-	    hotspot.addEventListener('mouseleave', function(e) {
-	      const bg = document.querySelector('.bg-img');
-	      if (!bg) return;
-		bg.style.transition = 'object-fit 3.2s, object-position 3.2s';
-		bg.style.objectFit = 'cover';
-		bg.style.width = '100vw';
-		bg.style.height = '100vh';
-		bg.style.objectPosition = '50% 50%';
-		// No parallax to re-enable, just reset zoom
-	    });
-	  });
-	}
-	window.addEventListener('DOMContentLoaded', setupHotspotSuperZoom);
-	</script>
-	<style>
-			.logo-link {
-				position: fixed;
-				top: 2vw;
-				left: 6vw;
-				z-index: 10;
-				background: transparent;
-				padding: 0;
-			}
-							.logo-img {
+
 								width: 20vw;
 								min-width: 100px;
 								max-width: 320px;
@@ -287,23 +260,9 @@
 			display: flex;
 		}
 	}
+	</style>
 
-
-
-
-		<a href="/interviews.html" class="hotspot" style="top: 44%; left: 65%;" data-bg-x="50" data-bg-y="50">
-			<span class="hotspot-label">Interviews</span>
-		</a>
-
-		<!-- Hotspot: Camera (Photography) -->
-		<a href="/photos.html" class="hotspot" style="top: 50%; left: 12%;" data-bg-x="50" data-bg-y="50">
-			<span class="hotspot-label">Photography</span>
-		</a>
-		<!-- No special JS for Photography hotspot -->
-
-		<!-- Hotspot: TV (Live Recordings) -->
-		<a href="/videos.html" class="hotspot" style="top: 15%; left: 70%;" data-bg-x="50" data-bg-y="50">
-			<span class="hotspot-label">Live Recordings</span>
-		</a>
-</body>
-</html>
+<!-- Hotspot: TV (Live Recordings) -->
+<a href="/videos.html" class="hotspot" style="top: 15%; left: 70%;" data-bg-x="50" data-bg-y="50">
+	<span class="hotspot-label">Live Recordings</span>
+</a>
