Describe what you changed here

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 				width: 100vw;
 				height: 100vh;
 				overflow: hidden;
-				background: #000 url('live/concertbackground.png') no-repeat center center fixed;
+				background: #000;
 				background-size: cover;
 				display: block;
 			}
