Describe what you changed here

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 				max-width: 100vw !important;
 				max-height: 100vh !important;
 				object-position: center center !important;
+				display: none !important;
+			}
+			.bg-img-container {
 				background: #000 url('live/20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png') no-repeat center center !important;
 				background-size: cover !important;
 			}
