--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				display: none !important;
 			}
 			.bg-img-container {
-				background: #000 url('live/20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png') no-repeat center center !important;
+				background: #000 url('20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png') no-repeat center center !important;
 				background-size: cover !important;
 			}
 			.hotspot {
