--- a/index.html
+++ b/index.html
@@ -33,13 +33,16 @@
 		}
 
 		.bg-img-container {
-			background: #000 url('desktop-home-bg.jpg') no-repeat center center;
+			background: #000 url('20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png') no-repeat center center;
 			background-size: cover;
 		}
 		@media (max-width: 600px) {
 			.bg-img-container {
 				background: #000 url('20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png') no-repeat center center !important;
 				background-size: cover !important;
+			}
+			.hotspot {
+				display: none !important;
 			}
 		}
 		}
