Describe what you changed here

--- a/index.html
+++ b/index.html
@@ -510,6 +510,17 @@
 				<a href="/contact.html">Contact</a>
 			</div>
 
+			<!-- Hotspot: Coffee Table (Interviews) -->
+			<a href="/interviews.html" class="hotspot" style="top: 44%; left: 65%;" data-bg-x="50" data-bg-y="50">
+				<span class="hotspot-label">Interviews</span>
+			</a>
+
+			<!-- Hotspot: Camera (Photography) -->
+			<a href="/photos.html" class="hotspot" style="top: 50%; left: 12%;" data-bg-x="50" data-bg-y="50">
+				<span class="hotspot-label">Photography</span>
+			</a>
+			<!-- No special JS for Photography hotspot -->
+
 			<!-- Hotspot: TV (Live Recordings) -->
 			<a href="/videos.html" class="hotspot" style="top: 15%; left: 70%;" data-bg-x="50" data-bg-y="50">
 				<span class="hotspot-label">Live Recordings</span>
