--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 		.fade-content {
 			opacity: 0;
 			transition: opacity 0.5s cubic-bezier(.4,0,.2,1);
+			background: transparent !important;
 		}
 		.fade-content.visible {
 			opacity: 1;
@@ -128,6 +129,7 @@
 		.fade-content.fade-out {
 			opacity: 0 !important;
 			transition: opacity 0.4s cubic-bezier(.4,0,.2,1);
+			background: transparent !important;
 		}
 	</style>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Permanent+Marker&display=swap" rel="stylesheet">
