Describe what you changed here

--- a/videos.html
+++ b/videos.html
@@ -5,6 +5,7 @@
       .fade-content {
         opacity: 0;
         transition: opacity 0.5s cubic-bezier(.4,0,.2,1);
+        background: transparent !important;
       }
       .fade-content.visible {
         opacity: 1;
@@ -12,6 +13,7 @@
       .fade-content.fade-out {
         opacity: 0 !important;
         transition: opacity 0.4s cubic-bezier(.4,0,.2,1);
+        background: transparent !important;
       }
     </style>
     <meta charset="UTF-8">
