--- a/interviews.html
+++ b/interviews.html
@@ -14,6 +14,7 @@
     .fade-content {
       opacity: 0;
       transition: opacity 0.5s cubic-bezier(.4,0,.2,1);
+      background: transparent !important;
     }
     .fade-content.visible {
       opacity: 1;
@@ -21,6 +22,7 @@
     .fade-content.fade-out {
       opacity: 0 !important;
       transition: opacity 0.4s cubic-bezier(.4,0,.2,1);
+      background: transparent !important;
     }
   </style>
   <meta charset="UTF-8">
