--- a/index.html
+++ b/index.html
@@ -2,47 +2,85 @@
 <html lang="en">
 <head>
 	<style>
-		@media (max-width: 600px) {
 			.logo-link {
 				top: 2vw !important;
 				left: 0 !important;
 				width: 100% !important;
 				text-align: center !important;
-			}
-			.logo-img {
-				width: 38vw !important;
-				min-width: 80px !important;
-				max-width: 180px !important;
-			}
-			.bottom-bar {
-				display: none !important;
-			}
-			.mobile-nav {
-				display: block !important;
-			}
-			.bg-img {
-				object-fit: cover !important;
-				width: 100vw !important;
-				height: 100vh !important;
-				min-width: 100vw !important;
-				min-height: 100vh !important;
-				max-width: 100vw !important;
-				max-height: 100vh !important;
-				object-position: center center !important;
-				display: none !important;
 		}
+		}
+				.bg-img-container {
+					background: #000 url('20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png') no-repeat center center !important;
+					background-size: cover !important;
+				}
+</style>
 
-		.bg-img-container {
-			background: #000 url('20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png') no-repeat center center;
-			background-size: cover;
-		}
-		@media (max-width: 600px) {
-			.bg-img-container {
-				background: #000 url('20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png') no-repeat center center !important;
-				background-size: cover !important;
-		}
-		}
-	}
+<body>
+	<div class="fade-content">
+		<nav class="bottom-bar">
+			<a href="/index.html">Home</a>
+			<a href="/photos.html">Photography</a>
+			<a href="/videos.html">Live Recordings</a>
+			<a href="/interviews.html">Interviews</a>
+			<a href="/contact.html">Contact</a>
+		</nav>
+		<!-- Background is now set via CSS -->
+		<a href="/index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview" class="logo-img" border="0"></a>
+		<!-- Hotspot: Coffee Table (Interviews) -->
+		<a href="/interviews.html" class="hotspot" style="top: 44%; left: 65%;" data-bg-x="50" data-bg-y="50">
+			<span class="hotspot-label">Interviews</span>
+		</a>
+		<!-- Hotspot: Camera (Photography) -->
+		<a href="/photos.html" class="hotspot" style="top: 50%; left: 12%;" data-bg-x="50" data-bg-y="50">
+			<span class="hotspot-label">Photography</span>
+		</a>
+		<!-- Hotspot: TV (Live Recordings) -->
+		<a href="/videos.html" class="hotspot" style="top: 15%; left: 70%;" data-bg-x="50" data-bg-y="50">
+			<span class="hotspot-label">Live Recordings</span>
+		</a>
+		<div class="bg-img-container">
+			<img src="https://videos.openai.com/vg-assets/assets%2Ftask_01k3rt7bzzespt7mep56qyhs6s%2F1756400852_img_0.webp?st=2025-08-28T15%3A52%3A53Z&se=2025-09-03T16%3A52%3A53Z&sks=b&skt=2025-08-28T15%3A52%3A53Z&ske=2025-09-03T16%3A52%3A53Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=aa5ddad1-c91a-4f0a-9aca-e20682cc8969&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=8X%2B%2Bf5os0GjZlKZUQ3rkgqCUku3L%2FkkQfyJRMEpCrUk%3D&az=oaivgprodscus" class="bg-img zoom-target" id="main-bg-img" alt="Room Background"/>
+		</div>
+		<!-- Recent Events Section -->
+		<section class="recent-events-section">
+			<h2 class="recent-events-title">Recent Events</h2>
+			<div class="event-passes-row">
+				<div class="event-pass-card" tabindex="0">
+					<img src="20250829_1648_Camera and Media Badge_remix_01k3vs9p0jfr7vyadgmzse2h63-Picsart-AiImageEnhancer.png" alt="Media Pass 1" class="event-pass-img" />
+					<div class="event-pass-details">
+						<div class="event-pass-date">August 29, 2025</div>
+						<div class="event-pass-title">Camera & Media Badge</div>
+						<div class="event-pass-description">Behind the scenes with the media crew at the studio.</div>
+					</div>
+				</div>
+				<div class="event-pass-card" tabindex="0">
+					<img src="20250829_1817_Concert Collection VHS_remix_01k3vycznhe5b889e8v784wgj3.png" alt="Media Pass 2" class="event-pass-img" />
+					<div class="event-pass-details">
+						<div class="event-pass-date">August 29, 2025</div>
+						<div class="event-pass-title">Concert Collection VHS</div>
+						<div class="event-pass-description">Vintage concert moments captured on VHS.</div>
+					</div>
+				</div>
+				<div class="event-pass-card" tabindex="0">
+					<img src="20250830_1141_Retro Concert VHS_remix_01k3xt3re2e2qse35jvm7qdx89.png" alt="Media Pass 3" class="event-pass-img" />
+					<div class="event-pass-details">
+						<div class="event-pass-date">August 30, 2025</div>
+						<div class="event-pass-title">Retro Concert VHS</div>
+						<div class="event-pass-description">A throwback to classic concert vibes.</div>
+					</div>
+				</div>
+				<div class="event-pass-card" tabindex="0">
+					<img src="20250830_1147_Music Interview Setup_remix_01k3xtfg5fefbb29m8hretr98a.png" alt="Media Pass 4" class="event-pass-img" />
+					<div class="event-pass-details">
+						<div class="event-pass-date">August 30, 2025</div>
+						<div class="event-pass-title">Music Interview Setup</div>
+						<div class="event-pass-description">Setting up for exclusive artist interviews.</div>
+					</div>
+				</div>
+			</div>
+		</section>
+	</div>
+</body>
 		.mobile-nav {
 			display: none;
 			position: fixed;
@@ -115,6 +153,107 @@
 		}
 		.mobile-menu.open {
 			display: flex;
+		}
+	</style>
+	<style>
+		.recent-events-section {
+			width: 100vw;
+			max-width: 100vw;
+			overflow-x: auto;
+			background: rgba(0,0,0,0.72);
+			padding: 32px 0 18px 0;
+			margin: 0 auto 0 auto;
+			z-index: 2;
+			position: relative;
+			box-shadow: 0 4px 24px #0007;
+			border-bottom: 2px solid #f47a2c33;
+		}
+		.recent-events-title {
+			color: #f47a2c;
+			font-family: 'Permanent Marker', 'Montserrat', Arial, sans-serif;
+			font-size: 2.1em;
+			margin: 0 0 18px 32px;
+			letter-spacing: 1.5px;
+			text-shadow: 0 2px 8px #000, 0 0 2px #f47a2c;
+		}
+		.event-passes-row {
+			display: flex;
+			flex-direction: row;
+			gap: 32px;
+			overflow-x: auto;
+			padding: 0 32px 0 32px;
+			scrollbar-width: thin;
+			scrollbar-color: #f47a2c #222;
+		}
+		.event-pass-card {
+			background: #222d;
+			border-radius: 18px;
+			box-shadow: 0 2px 16px #0008;
+			min-width: 220px;
+			max-width: 240px;
+			flex: 0 0 auto;
+			cursor: pointer;
+			transition: transform 0.18s, box-shadow 0.18s;
+			outline: none;
+			border: 2px solid transparent;
+			position: relative;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			padding: 18px 12px 16px 12px;
+		}
+		.event-pass-card:focus, .event-pass-card:hover {
+			transform: scale(1.06) translateY(-4px);
+			box-shadow: 0 6px 32px #f47a2c55, 0 0 0 2px #f47a2c;
+			border: 2px solid #f47a2c;
+			z-index: 3;
+		}
+		.event-pass-img {
+			width: 100%;
+			max-width: 180px;
+			border-radius: 12px;
+			box-shadow: 0 2px 12px #000a;
+			margin-bottom: 12px;
+			background: #111;
+		}
+		.event-pass-details {
+			color: #fffbe7;
+			font-family: 'Montserrat', Arial, sans-serif;
+			text-align: center;
+			margin-top: 2px;
+		}
+		.event-pass-date {
+			font-size: 1.05em;
+			color: #f47a2c;
+			font-weight: bold;
+			margin-bottom: 2px;
+		}
+		.event-pass-title {
+			font-size: 1.15em;
+			font-weight: 700;
+			margin-bottom: 4px;
+			color: #fff;
+			letter-spacing: 0.5px;
+		}
+		.event-pass-description {
+			font-size: 0.98em;
+			color: #fffbe7cc;
+			margin-bottom: 0;
+		}
+		@media (max-width: 700px) {
+			.event-passes-row {
+				gap: 16px;
+				padding: 0 8vw 0 8vw;
+			}
+			.event-pass-card {
+				min-width: 160px;
+				max-width: 180px;
+				padding: 12px 6px 12px 6px;
+			}
+			.recent-events-title {
+				font-size: 1.3em;
+				margin-left: 12px;
+			}
 		}
 	</style>
 	<style>
@@ -401,63 +540,7 @@
 	</style>
 			   </head>
 			<body>
-			       <div class="bg-img-container">
-				       <img src="https://videos.openai.com/vg-assets/assets%2Ftask_01k3rt7bzzespt7mep56qyhs6s%2F1756400852_img_0.webp?st=2025-08-28T15%3A52%3A53Z&se=2025-09-03T16%3A52%3A53Z&sks=b&skt=2025-08-28T15%3A52%3A53Z&ske=2025-09-03T16%3A52%3A53Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=aa5ddad1-c91a-4f0a-9aca-e20682cc8969&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=8X%2B%2Bf5os0GjZlKZUQ3rkgqCUku3L%2FkkQfyJRMEpCrUk%3D&az=oaivgprodscus" class="bg-img zoom-target" id="main-bg-img" alt="Room Background"/>
-				</div>
 
-				<!-- Recent Events Section -->
-				<section id="recent-events" style="width:100vw; background:rgba(0,0,0,0.92); padding: 60px 0 80px 0; margin-top: 0;">
-					<h2 style="text-align:center; color:#f47a2c; font-family:'Permanent Marker', 'Montserrat', Arial, sans-serif; font-size:2.2em; margin-bottom:32px; letter-spacing:1px;">Recent Events</h2>
-					<div class="event-passes-row" style="display:flex; flex-wrap:wrap; justify-content:center; gap:36px; overflow-x:auto; padding: 0 24px;">
-						<!-- Sample Event Pass -->
-						<div class="event-pass-card" style="background:#222; border-radius:18px; box-shadow:0 4px 24px #0008; border:3px solid #f47a2c; width:220px; min-width:180px; max-width:240px; display:flex; flex-direction:column; align-items:center; cursor:pointer; transition:transform 0.18s;">
-							<img src="live/20250829_1648_Camera and Media Badge_remix_01k3vs9p0jfr7vyadgmzse2h63-Picsart-AiImageEnhancer.png" alt="Media Pass" style="width:100%; height:auto; border-radius:14px 14px 0 0;">
-							<div style="padding:16px 10px 10px 10px; text-align:center;">
-								<div style="font-family:'Permanent Marker', 'Montserrat', Arial, sans-serif; color:#f47a2c; font-size:1.1em; margin-bottom:6px;">Concert Collection VHS</div>
-								<div style="color:#fffbe7; font-size:0.98em; opacity:0.8; margin-bottom:10px;">August 29, 2025</div>
-								<button class="expand-event-btn" style="background:#f47a2c; color:#222; font-weight:bold; border:none; border-radius:8px; padding:7px 18px; font-size:1em; cursor:pointer;">View Event</button>
-							</div>
-							<div class="event-details" style="display:none; background:#181818; color:#fff; border-radius:0 0 14px 14px; padding:18px 12px 12px 12px; width:100%;">
-								<div style="margin-bottom:10px; font-size:1.05em; color:#f47a2c;">Event Links:</div>
-								<ul style="list-style:none; padding:0; margin:0;">
-									<li><a href="/photos.html" style="color:#f47a2c; text-decoration:none;">Photos</a></li>
-									<li><a href="/videos.html" style="color:#f47a2c; text-decoration:none;">Recordings</a></li>
-									<li><a href="/interviews.html" style="color:#f47a2c; text-decoration:none;">Interviews</a></li>
-								</ul>
-							</div>
-						</div>
-						<!-- Add more event-pass-card blocks here for more events -->
-					</div>
-				</section>
-
-				<script>
-				// Expand/collapse event details
-				document.addEventListener('DOMContentLoaded', function() {
-					document.querySelectorAll('.event-pass-card').forEach(function(card) {
-						var btn = card.querySelector('.expand-event-btn');
-						var details = card.querySelector('.event-details');
-						btn.addEventListener('click', function(e) {
-							e.stopPropagation();
-							var isOpen = details.style.display === 'block';
-							document.querySelectorAll('.event-details').forEach(function(d) { d.style.display = 'none'; });
-							details.style.display = isOpen ? 'none' : 'block';
-						});
-						// Optional: clicking outside the details closes it
-						card.addEventListener('click', function(e) {
-							if (e.target === btn) return;
-							var isOpen = details.style.display === 'block';
-							document.querySelectorAll('.event-details').forEach(function(d) { d.style.display = 'none'; });
-							details.style.display = isOpen ? 'none' : 'block';
-						});
-					});
-					// Close details if clicking outside any card
-					document.addEventListener('click', function(e) {
-						if (!e.target.closest('.event-pass-card')) {
-							document.querySelectorAll('.event-details').forEach(function(d) { d.style.display = 'none'; });
-						}
-					});
-				});
-				</script>
 	<script>
 		// Hamburger menu toggle for mobile
 		document.addEventListener('DOMContentLoaded', function() {
