Restore main HTML files to state from 1 hour ago (commit 627482f)

--- a/photos.html
+++ b/photos.html
@@ -46,6 +46,7 @@
     .fade-content {
       opacity: 0;
       transition: opacity 0.5s cubic-bezier(.4,0,.2,1);
+      background: transparent !important;
     }
     .fade-content.visible {
       opacity: 1;
@@ -53,6 +54,7 @@
     .fade-content.fade-out {
       opacity: 0 !important;
       transition: opacity 0.4s cubic-bezier(.4,0,.2,1);
+      background: transparent !important;
     }
   </style>
   <meta charset="UTF-8">
@@ -183,10 +185,10 @@
     });
   </script>
   <div class="fade-content">
-    <a href="index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Logo" class="logo-img" border="0"></a>
     <div class="bg-img-container">
       <img src="camera.png" class="bg-img" alt="Photos Background" />
     </div>
+    <a href="index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Logo" class="logo-img" border="0"></a>
     <div class="photos-hero">
       <!-- Add your photo gallery or content here -->
     </div>
