--- a/live/index.html
+++ b/live/index.html
@@ -1,255 +1,134 @@
-body.zoomed-photography .hotspot,
-body.zoomed-photography .hotspot-label {
-	display: none !important;
-}
+<!DOCTYPE html>
+<html lang="en">
 
-	<style>
-			   /* Removed duplicate style block */
-	</style>
+<!-- All <style> and <script> tags should be in <head> or before </body> -->
 </head>
-<body>
-					<nav class="bottom-bar">
-						<a href="/index.html">Home</a>
-						<a href="/photos.html">Photography</a>
-						<a href="/videos.html">Live Recordings</a>
-						<a href="/interviews.html">Interviews</a>
-						<a href="/contact.html">Contact</a>
-					</nav>
-					<a href="/index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview" class="logo-img" border="0"></a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Dakota's Music World</title>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Permanent+Marker&display=swap" rel="stylesheet">
 	<style>
-		.mobile-nav { display: none; position: fixed; top: 0; left: 0; z-index: 200; }
+		html, body { height: 100%; margin: 0; padding: 0; }
+		body { width: 100vw; height: 100vh; overflow: hidden; background: #000; color: #fff; font-family: 'Montserrat', Arial, sans-serif; }
+		.bg-img-container { position: fixed; left: 0; top: 0; width: 100vw; height: 100vh; z-index: 0; overflow: hidden; }
+		.bg-img { width: 100vw; height: 100vh; object-fit: cover; object-position: center center; position: absolute; left: 0; top: 0; z-index: 0; user-select: none; pointer-events: none; }
+		.bg-img.zoom-target { transition: transform 0.7s cubic-bezier(.4,2,.6,1), opacity 0.5s; transform: scale(1); transform-origin: center center; }
+		.bg-img.zoom-target.zoomed { transform: scale(2.2) translateX(10vw) translateY(4vh); transform-origin: 8% 68%; z-index: 10; }
+		.logo-link { position: fixed; top: 2vw; left: 6vw; z-index: 10; background: transparent; padding: 0; }
+		.logo-img { width: 20vw; min-width: 100px; max-width: 320px; height: auto; filter: brightness(1.35) drop-shadow(0 0 16px #fff8); transition: width 0.2s, top 0.2s, left 0.2s; }
+		.bottom-bar { position: fixed; left: 0; bottom: 0; width: 100vw; background: rgba(56,69,31,0.82); color: #fff; display: flex; justify-content: center; align-items: center; gap: 36px; padding: 18px 0 14px 0; z-index: 100; font-family: 'Permanent Marker', 'Montserrat', Arial, sans-serif; font-size: 1.35em; box-shadow: 0 -2px 12px #0005; letter-spacing: 0.5px; }
+		.bottom-bar a { color: #f47a2c; text-decoration: none; font-weight: 700; padding: 6px 18px; border-radius: 8px; transition: background 0.18s, color 0.18s; background: transparent; }
+		.bottom-bar a:hover { background: #38451f; color: #f47a2c; }
+		.hotspot { position: absolute; width: 40px; height: 40px; justify-content: center; align-items: center; display: flex; gap: 0; padding: 0; border-radius: 50%; background: rgba(255,255,255,0.08); box-shadow: 0 2px 8px #0004; border: 2px solid #f47a2c; cursor: pointer; z-index: 20; transition: box-shadow 0.2s, background 0.2s, border 0.2s; }
+		.hotspot::before { content: ''; display: block; width: 13px; height: 13px; border-radius: 50%; border: 2px solid #fff; background: #f47a2c; opacity: 0.7; box-sizing: border-box; box-shadow: none; }
+		.hotspot:hover { box-shadow: 0 4px 16px #f47a2c44; background: rgba(244,122,44,0.10); border: 2px solid #fff; }
+		.hotspot-label { position: absolute; top: 36px; left: 50%; transform: translateX(-50%); background: linear-gradient(90deg, #38451f 60%, #f47a2c 100%); color: #fffbe7; font-family: 'Permanent Marker', 'Montserrat', Arial, sans-serif; font-size: 1.1em; font-weight: bold; letter-spacing: 1.2px; text-shadow: 0 2px 8px #000, 0 0 2px #f47a2c; border: 2px solid #f47a2c; box-shadow: 0 2px 12px #f47a2c55, 0 0 0 2px #38451f; padding: 5px 18px; border-radius: 12px; white-space: nowrap; pointer-events: none; opacity: 0; transition: opacity 0.2s, background 0.3s, color 0.3s; }
+		.hotspot:hover .hotspot-label { opacity: 1; }
 		@media (max-width: 600px) {
-			.logo-link {
-				top: 2vw;
-				left: 0;
-				width: 100%;
-				text-align: center;
-			}
-			.logo-img {
-				width: 38vw;
-				min-width: 80px;
-				max-width: 180px;
-			}
-			.hamburger {
-				width: 48px;
-				height: 48px;
-				margin-top: 6vw;
-			}
-			.bottom-bar {
-				display: none !important;
-			}
-			.mobile-nav {
-				display: block;
-			}
-			.hamburger {
-				display: flex;
-				flex-direction: column;
-				justify-content: center;
-				align-items: center;
-				width: 48px;
-				height: 48px;
-				background: rgba(56,69,31,0.82);
-				border: none;
-				border-radius: 8px;
-				margin: 10px 0 0 10px;
-				cursor: pointer;
-				z-index: 201;
-			}
-			.hamburger span {
-				display: block;
-				width: 28px;
-				height: 4px;
-				margin: 3px 0;
-				background: #f47a2c;
-				border-radius: 2px;
-				transition: 0.2s;
-			}
-			.mobile-menu {
-				display: block;
-				flex-direction: column;
-				position: absolute;
-				top: 56px;
-				left: 0;
-				width: 60vw;
-				min-width: 160px;
-				max-width: 240px;
-				background: rgba(56,69,31,0.98);
-				border-radius: 18px !important;
-				box-shadow: 0 4px 16px #0008;
-				padding: 2px 8px;
-				box-sizing: border-box;
-				z-index: 202;
-				max-height: 0;
-				overflow: hidden;
-				opacity: 0;
-				text-align: left;
-				transition: max-height 0.35s cubic-bezier(0.4,0,0.2,1), opacity 0.25s;
-			}
-			.mobile-menu.open {
-				display: flex;
-				max-height: 500px;
-				opacity: 1;
-				transition: max-height 0.35s cubic-bezier(0.4,0,0.2,1), opacity 0.25s;
-			}
-			.mobile-menu a {
-				color: #f47a2c;
-				text-decoration: none;
-				font-weight: 700;
-				padding: 8px 8px;
-				display: block;
-				font-size: 1.1em;
-				border-bottom: 1px solid #38451f;
-				text-align: left;
-			}
-			.mobile-menu a:last-child {
-				border-bottom: none;
-			}
-			.mobile-menu.open {
-				display: flex;
-			}
+			.logo-link { top: 12vw; left: 2vw; width: 100% !important; text-align: center !important; }
+			.logo-img { width: 38vw !important; min-width: 80px !important; max-width: 180px !important; }
+			.bottom-bar { display: none !important; }
+			.mobile-nav { display: block !important; }
 		}
-	</style>
-					height: 13px;
-					border-radius: 50%;
-					border: 2px solid #fff;
-					background: #f47a2c;
-					opacity: 0.7;
-					box-sizing: border-box;
-					box-shadow: none;
-				}
-				.hotspot:hover {
-					box-shadow: 0 4px 16px #f47a2c44;
-					background: rgba(244,122,44,0.10);
-					border: 2px solid #fff;
-				}
-		.hotspot-label {
-			position: absolute;
-			top: 36px;
-			left: 50%;
-			transform: translateX(-50%);
-		background: linear-gradient(90deg, #38451f 60%, #f47a2c 100%);
-		color: #fffbe7;
-		font-family: 'Permanent Marker', 'Montserrat', Arial, sans-serif;
-		font-size: 1.1em;
-		font-weight: bold;
-		letter-spacing: 1.2px;
-		text-shadow: 0 2px 8px #000, 0 0 2px #f47a2c;
-		border: 2px solid #f47a2c;
-		box-shadow: 0 2px 12px #f47a2c55, 0 0 0 2px #38451f;
-		padding: 5px 18px;
-		border-radius: 12px;
-		white-space: nowrap;
-		pointer-events: none;
-		opacity: 0;
-		transition: opacity 0.2s, background 0.3s, color 0.3s;
-		}
-		.hotspot:hover .hotspot-label {
-			opacity: 1;
-		}
-			html, body {
-				height: 100%;
-				margin: 0;
-				padding: 0;
-			}
-			body {
-				width: 100vw;
-				height: 100vh;
-				overflow: hidden;
-				background: #000;
-				display: block;
-			}
+		.mobile-nav { display: none; position: fixed; top: 0; left: 0; z-index: 200; }
+		.hamburger { display: flex; flex-direction: column; justify-content: center; align-items: center; width: 48px; height: 48px; background: rgba(56,69,31,0.82); border: none; border-radius: 8px; margin: 10px 0 0 10px; cursor: pointer; z-index: 201; }
+		.hamburger span { display: block; width: 28px; height: 4px; margin: 3px 0; background: #f47a2c; border-radius: 2px; transition: 0.2s; }
+		.mobile-menu { display: block; flex-direction: column; position: absolute; top: 56px; left: 0; width: 60vw; min-width: 160px; max-width: 240px; background: rgba(56,69,31,0.98); border-radius: 18px !important; box-shadow: 0 4px 16px #0008; padding: 2px 8px; box-sizing: border-box; z-index: 202; max-height: 0; overflow: hidden; opacity: 0; text-align: left; transition: max-height 0.35s cubic-bezier(0.4,0,0.2,1), opacity 0.25s; }
+		.mobile-menu.open { display: flex; max-height: 500px; opacity: 1; transition: max-height 0.35s cubic-bezier(0.4,0,0.2,1), opacity 0.25s; }
+		.mobile-menu a { color: #f47a2c; text-decoration: none; font-weight: 700; padding: 8px 8px; display: block; font-size: 1.1em; border-bottom: 1px solid #38451f; text-align: left; }
+		.mobile-menu a:last-child { border-bottom: none; }
 	</style>
 	<script>
-	// Set initial background size and position for <img>
-
-
-
-	// Zoom-in effect on hotspot hover for index page
-	function setupHotspotZoom() {
-	  document.querySelectorAll('.hotspot').forEach(function(hotspot) {
-			hotspot.addEventListener('mouseenter', function(e) {
-				// Prevent Photography hotspot from moving or zooming background
-				if (hotspot.getAttribute('href') === 'photos.html' || hotspot.getAttribute('href') === '/live/photos.html') {
-					return;
-				}
-				const bg = document.querySelector('.bg-img');
-				if (!bg) return;
-				let xPercent = hotspot.getAttribute('data-bg-x') || 50;
-				let yPercent = hotspot.getAttribute('data-bg-y') || 50;
-				// Allow px or %
-				if (!String(xPercent).includes('%') && !String(xPercent).includes('px')) xPercent = `${xPercent}%`;
-				if (!String(yPercent).includes('%') && !String(yPercent).includes('px')) yPercent = `${yPercent}%`;
-				bg.style.transition = 'object-fit 2.5s cubic-bezier(.4,2,.6,1), object-position 2.5s cubic-bezier(.4,2,.6,1)';
-				bg.style.objectFit = 'cover';
-				bg.style.width = '100vw';
-				bg.style.height = '100vh';
-				bg.style.objectPosition = `${xPercent} ${yPercent}`;
-	    });
-			hotspot.addEventListener('mouseleave', function(e) {
-				// Prevent Photography hotspot from moving or zooming background
-				if (hotspot.getAttribute('href') === 'photos.html' || hotspot.getAttribute('href') === '/live/photos.html') {
-					return;
-				}
-				const bg = document.querySelector('.bg-img');
-				if (!bg) return;
-				bg.style.transition = 'object-fit 2.5s, object-position 2.5s';
-				bg.style.objectFit = 'cover';
-				bg.style.width = '100vw';
-				bg.style.height = '100vh';
-				bg.style.objectPosition = '50% 50%';
-	    });
-	  });
-	}
-	window.addEventListener('DOMContentLoaded', setupHotspotZoom);
-
-	// Super zoom-in effect on hotspot hover for index page
-	function setupHotspotSuperZoom() {
-	  document.querySelectorAll('.hotspot').forEach(function(hotspot) {
-	    hotspot.addEventListener('mouseenter', function(e) {
-	      const bg = document.querySelector('.bg-img');
-	      if (!bg) return;
-		let xPercent = hotspot.getAttribute('data-bg-x') || 50;
-		let yPercent = hotspot.getAttribute('data-bg-y') || 50;
-		// Allow px or %
-		if (!String(xPercent).includes('%') && !String(xPercent).includes('px')) xPercent = `${xPercent}%`;
-		if (!String(yPercent).includes('%') && !String(yPercent).includes('px')) yPercent = `${yPercent}%`;
-		// No parallax to disable, just zoom
-		bg.style.transition = 'object-fit 3.2s cubic-bezier(.4,2,.6,1), object-position 3.2s cubic-bezier(.4,2,.6,1)';
-		bg.style.objectFit = 'cover';
-				// Only zoom for other hotspots, not Photography
-								if (hotspot.getAttribute('href') === 'photos.html' || hotspot.getAttribute('href') === '/live/photos.html') {
-									// Do nothing: don't move or zoom the background for Photography
-									return;
-								} else {
-									bg.style.width = '300vw';
-									bg.style.height = '300vh';
-								}
-		bg.style.objectPosition = `${xPercent} ${yPercent}`;
-	    });
-	    hotspot.addEventListener('mouseleave', function(e) {
-	      const bg = document.querySelector('.bg-img');
-	      if (!bg) return;
-		bg.style.transition = 'object-fit 3.2s, object-position 3.2s';
-		bg.style.objectFit = 'cover';
-		bg.style.width = '100vw';
-		bg.style.height = '100vh';
-		bg.style.objectPosition = '50% 50%';
-		// No parallax to re-enable, just reset zoom
-	    });
-	  });
-	}
-	window.addEventListener('DOMContentLoaded', setupHotspotSuperZoom);
-	</script>
-	<style>
-			.logo-link {
-				position: fixed;
-				top: 2vw;
-				left: 6vw;
-				z-index: 10;
-				background: transparent;
-				padding: 0;
+		document.addEventListener('DOMContentLoaded', function() {
+			var hamburger = document.querySelector('.hamburger');
+			var menu = document.querySelector('.mobile-menu');
+			if (hamburger && menu) {
+				hamburger.addEventListener('click', function() {
+					menu.classList.toggle('open');
+				});
+				menu.querySelectorAll('a').forEach(function(link) {
+					link.addEventListener('click', function() {
+						menu.classList.remove('open');
+					});
+				});
 			}
-							.logo-img {
+		});
+		function setupHotspotZoom() {
+			document.querySelectorAll('.hotspot').forEach(function(hotspot) {
+				hotspot.addEventListener('mouseenter', function(e) {
+					if (hotspot.getAttribute('href') === 'photos.html' || hotspot.getAttribute('href') === '/live/photos.html') { return; }
+					const bg = document.querySelector('.bg-img');
+					if (!bg) return;
+					let xPercent = hotspot.getAttribute('data-bg-x') || 50;
+					let yPercent = hotspot.getAttribute('data-bg-y') || 50;
+					if (!String(xPercent).includes('%') && !String(xPercent).includes('px')) xPercent = `${xPercent}%`;
+					if (!String(yPercent).includes('%') && !String(yPercent).includes('px')) yPercent = `${yPercent}%`;
+					bg.style.transition = 'object-fit 2.5s cubic-bezier(.4,2,.6,1), object-position 2.5s cubic-bezier(.4,2,.6,1)';
+					bg.style.objectFit = 'cover';
+					bg.style.width = '100vw';
+					bg.style.height = '100vh';
+					bg.style.objectPosition = `${xPercent} ${yPercent}`;
+				});
+				hotspot.addEventListener('mouseleave', function(e) {
+					if (hotspot.getAttribute('href') === 'photos.html' || hotspot.getAttribute('href') === '/live/photos.html') { return; }
+					const bg = document.querySelector('.bg-img');
+					if (!bg) return;
+					bg.style.transition = 'object-fit 2.5s, object-position 2.5s';
+					bg.style.objectFit = 'cover';
+					bg.style.width = '100vw';
+					bg.style.height = '100vh';
+					bg.style.objectPosition = '50% 50%';
+				});
+			});
+		}
+		window.addEventListener('DOMContentLoaded', setupHotspotZoom);
+		function setupHotspotSuperZoom() {
+			document.querySelectorAll('.hotspot').forEach(function(hotspot) {
+				hotspot.addEventListener('mouseenter', function(e) {
+					const bg = document.querySelector('.bg-img');
+					if (!bg) return;
+					let xPercent = hotspot.getAttribute('data-bg-x') || 50;
+					let yPercent = hotspot.getAttribute('data-bg-y') || 50;
+					if (!String(xPercent).includes('%') && !String(xPercent).includes('px')) xPercent = `${xPercent}%`;
+					if (!String(yPercent).includes('%') && !String(yPercent).includes('px')) yPercent = `${yPercent}%`;
+					if (hotspot.getAttribute('href') === 'photos.html' || hotspot.getAttribute('href') === '/live/photos.html') { return; } else { bg.style.width = '300vw'; bg.style.height = '300vh'; }
+					bg.style.objectPosition = `${xPercent} ${yPercent}`;
+				});
+				hotspot.addEventListener('mouseleave', function(e) {
+					const bg = document.querySelector('.bg-img');
+					if (!bg) return;
+					bg.style.transition = 'object-fit 3.2s, object-position 3.2s';
+					bg.style.objectFit = 'cover';
+					bg.style.width = '100vw';
+					bg.style.height = '100vh';
+					bg.style.objectPosition = '50% 50%';
+				});
+			});
+		}
+		window.addEventListener('DOMContentLoaded', setupHotspotSuperZoom);
+	</script>
+</head>
+<body>
+	<div class="bg-img-container">
+		<img src="https://videos.openai.com/vg-assets/assets%2Ftask_01k3rt7bzzespt7mep56qyhs6s%2F1756400852_img_0.webp?st=2025-08-28T15%3A52%3A53Z&se=2025-09-03T16%3A52%3A53Z&sks=b&skt=2025-08-28T15%3A52%3A53Z&ske=2025-09-03T16%3A52%3A53Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=aa5ddad1-c91a-4f0a-9aca-e20682cc8969&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=8X%2B%2Bf5os0GjZlKZUQ3rkgqCUku3L%2FkkQfyJRMEpCrUk%3D&az=oaivgprodscus" class="bg-img zoom-target" id="main-bg-img" alt="Room Background"/>
+	</div>
+	<div class="mobile-nav">
+		<button class="hamburger" aria-label="Open navigation menu">
+			<span></span><span></span><span></span>
+		</button>
+		<div class="mobile-menu">
+			<a href="/index.html">Home</a>
+			<a href="/photos.html">Photography</a>
+			<a href="/videos.html">Live Recordings</a>
+			<a href="/interviews.html">Interviews</a>
+			<a href="/contact.html">Contact</a>
+		</div>
+	</div>
+	<a href="/index.html" class="logo-link"><img src="https://i.ibb.co/m5bVFqcV/Chat-GPT-Image-Aug-28-2025-at-02-46-48-PM-removebg-preview.png" alt="Logo" class="logo-img" border="0"></a>
+
 								width: 20vw;
 								min-width: 100px;
 								max-width: 320px;
@@ -381,41 +260,9 @@ body.zoomed-photography .hotspot-label {
 			display: flex;
 		}
 	}
-</head>
-<body>
-	<script>
-		// Hamburger menu toggle for mobile
-		document.addEventListener('DOMContentLoaded', function() {
-			var hamburger = document.querySelector('.hamburger');
-			var menu = document.querySelector('.mobile-menu');
-			if (hamburger && menu) {
-				hamburger.addEventListener('click', function() {
-					menu.classList.toggle('open');
-				});
-				// Optional: close menu when a link is clicked
-				menu.querySelectorAll('a').forEach(function(link) {
-					link.addEventListener('click', function() {
-						menu.classList.remove('open');
-					});
-				});
-			}
-		});
-	</script>
+	</style>
 
-			<!-- Hotspot: Coffee Table (Interviews) -->
-			<a href="/interviews.html" class="hotspot" style="top: 44%; left: 65%;" data-bg-x="50" data-bg-y="50">
-				<span class="hotspot-label">Interviews</span>
-			</a>
-
-			<!-- Hotspot: Camera (Photography) -->
-			<a href="/photos.html" class="hotspot" style="top: 50%; left: 12%;" data-bg-x="50" data-bg-y="50">
-				<span class="hotspot-label">Photography</span>
-			</a>
-<!-- No special JS for Photography hotspot -->
-
-			<!-- Hotspot: TV (Live Recordings) -->
-			<a href="/videos.html" class="hotspot" style="top: 15%; left: 70%;" data-bg-x="50" data-bg-y="50">
-				<span class="hotspot-label">Live Recordings</span>
-			</a>
-</body>
-</html>
+<!-- Hotspot: TV (Live Recordings) -->
+<a href="/videos.html" class="hotspot" style="top: 15%; left: 70%;" data-bg-x="50" data-bg-y="50">
+	<span class="hotspot-label">Live Recordings</span>
+</a>
