Describe what you changed here

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				   padding: 0;
 		}
 				   .bg-img-container {
-					   background: #000 url('20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png') no-repeat center center !important;
+					   background: #000 url('studio-living-room-bg.png') no-repeat center center !important;
 					   background-size: cover !important;
 				   }
 </style>
@@ -42,7 +42,7 @@
 			<span class="hotspot-label">Live Recordings</span>
 		</a>
 		<div class="bg-img-container">
-			   <img src="20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png" class="bg-img zoom-target" id="main-bg-img" alt="Room Background"/>
+			   <img src="studio-living-room-bg.png" class="bg-img zoom-target" id="main-bg-img" alt="Room Background"/>
 		</div>
 	</div>
 </body>
