Describe what you changed here

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
 	<style>
+	body {
+		background: url('studio-living-room-bg.png') no-repeat center center fixed;
+		background-size: cover;
+	}
 			   .logo-link {
 				   position: fixed;
 				   top: 2vw;
