Describe what you changed here

--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html lang="en">
 <head>
 	<style>
-	body {
-		background: url('studio-living-room-bg.png') no-repeat center center fixed;
-		background-size: cover;
-	}
 			   .logo-link {
 				   position: fixed;
 				   top: 2vw;
@@ -155,10 +151,14 @@
 				width: 100vw;
 				height: 100vh;
 				overflow: hidden;
-				background: #000;
-				background-size: cover;
 				display: block;
 			}
+</style>
+<style>
+body {
+	background: url('studio-living-room-bg.png') no-repeat center center fixed;
+	background-size: cover;
+}
 					.bg-img-container {
 						position: fixed;
 						left: 0; top: 0;
