Describe what you changed here

--- a/live/index.html
+++ b/live/index.html
@@ -12,10 +12,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Permanent+Marker&display=swap" rel="stylesheet">
 	<style>
 		html, body { height: 100%; margin: 0; padding: 0; }
-			body { width: 100vw; height: 100vh; overflow: hidden; color: #fff; font-family: 'Montserrat', Arial, sans-serif;
-				background: url('../studio-living-room-bg.png') no-repeat center center fixed;
-				background-size: cover;
-			}
+				body { width: 100vw; height: 100vh; overflow: hidden; color: #fff; font-family: 'Montserrat', Arial, sans-serif;
+					background: url('../20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png') no-repeat center center fixed;
+					background-size: cover;
+				}
 		.bg-img-container { position: fixed; left: 0; top: 0; width: 100vw; height: 100vh; z-index: 0; overflow: hidden; }
 		.bg-img { width: 100vw; height: 100vh; object-fit: cover; object-position: center center; position: absolute; left: 0; top: 0; z-index: 0; user-select: none; pointer-events: none; }
 		.bg-img.zoom-target { transition: transform 0.7s cubic-bezier(.4,2,.6,1), opacity 0.5s; transform: scale(1); transform-origin: center center; }
@@ -116,7 +116,7 @@
 </head>
 <body>
 	<div class="bg-img-container">
-		<img src="../studio-living-room-bg.png" class="bg-img zoom-target" id="main-bg-img" alt="Room Background"/>
+	<img src="../20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png" class="bg-img zoom-target" id="main-bg-img" alt="Room Background"/>
 	</div>
 	<div class="mobile-nav">
 		<button class="hamburger" aria-label="Open navigation menu">
