Describe what you changed here

--- a/live/index.html
+++ b/live/index.html
@@ -115,6 +115,8 @@
 	</script>
 </head>
 <body>
+	<!-- TEST: If you see the image below, the path is correct -->
+	<img src="../20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png" alt="Test Background" style="width:300px; border:3px solid red; display:block; margin:20px auto;">
 	<div class="bg-img-container">
 	<img src="../20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png" class="bg-img zoom-target" id="main-bg-img" alt="Room Background"/>
 	</div>
