Describe what you changed here

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<span class="hotspot-label">Live Recordings</span>
 		</a>
 		<div class="bg-img-container">
-			   <img src="studio-living-room-bg.png" class="bg-img zoom-target" id="main-bg-img" alt="Room Background"/>
+			   <img src="20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png" class="bg-img zoom-target" id="main-bg-img" alt="Studio Living Room Background"/>
 		</div>
 	</div>
 </body>
@@ -151,14 +151,10 @@
 				width: 100vw;
 				height: 100vh;
 				overflow: hidden;
+				background: #000;
+				background-size: cover;
 				display: block;
 			}
-</style>
-<style>
-body {
-	background: url('studio-living-room-bg.png') no-repeat center center fixed;
-	background-size: cover;
-}
 					.bg-img-container {
 						position: fixed;
 						left: 0; top: 0;
