--- a/live/index.html
+++ b/live/index.html
@@ -12,10 +12,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Permanent+Marker&display=swap" rel="stylesheet">
 	<style>
 		html, body { height: 100%; margin: 0; padding: 0; }
-				body { width: 100vw; height: 100vh; overflow: hidden; color: #fff; font-family: 'Montserrat', Arial, sans-serif;
-					background: url('../20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png') no-repeat center center fixed;
-					background-size: cover;
-				}
+		body { width: 100vw; height: 100vh; overflow: hidden; background: #000; color: #fff; font-family: 'Montserrat', Arial, sans-serif; }
 		.bg-img-container { position: fixed; left: 0; top: 0; width: 100vw; height: 100vh; z-index: 0; overflow: hidden; }
 		.bg-img { width: 100vw; height: 100vh; object-fit: cover; object-position: center center; position: absolute; left: 0; top: 0; z-index: 0; user-select: none; pointer-events: none; }
 		.bg-img.zoom-target { transition: transform 0.7s cubic-bezier(.4,2,.6,1), opacity 0.5s; transform: scale(1); transform-origin: center center; }
@@ -115,10 +112,8 @@
 	</script>
 </head>
 <body>
-	<!-- TEST: If you see the image below, the path is correct -->
-	<img src="../20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png" alt="Test Background" style="width:300px; border:3px solid red; display:block; margin:20px auto;">
 	<div class="bg-img-container">
-	<img src="../20250901_1106_Studio Living Room_remix_01k42wxe34emgtke5ntje6k1qw.png" class="bg-img zoom-target" id="main-bg-img" alt="Room Background"/>
+		<img src="https://videos.openai.com/vg-assets/assets%2Ftask_01k3rt7bzzespt7mep56qyhs6s%2F1756400852_img_0.webp?st=2025-08-28T15%3A52%3A53Z&se=2025-09-03T16%3A52%3A53Z&sks=b&skt=2025-08-28T15%3A52%3A53Z&ske=2025-09-03T16%3A52%3A53Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=aa5ddad1-c91a-4f0a-9aca-e20682cc8969&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=8X%2B%2Bf5os0GjZlKZUQ3rkgqCUku3L%2FkkQfyJRMEpCrUk%3D&az=oaivgprodscus" class="bg-img zoom-target" id="main-bg-img" alt="Room Background"/>
 	</div>
 	<div class="mobile-nav">
 		<button class="hamburger" aria-label="Open navigation menu">
